--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -30,7 +30,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -509,6 +511,29 @@
     "sns.distplot(df['Age'][df['Sex']=='male'],bins=20, label='Male') \n",
     "sns.distplot(df['Age'][df['Sex']=='female'],bins=20,label='Female') ;\n",
     "plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sex\n",
+       "female    0.742038\n",
+       "male      0.188908\n",
+       "Name: Survived, dtype: float64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"Sex\")[\"Survived\"].mean()\n"
    ]
   }
  ],
